--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kishore's Portpolio</title>
+    <title>Kishore's Portfolio</title>
 </head>
 <body>
-    <h1>Kishore Bandla Portpolio</h1>
+    <h1>Kishore Bandla Portfolio</h1>
     <h2>I am a Web developer</h2>
     <hr />
     <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
